# bgit

./: .gitignore  CMakeLists.txt  README.md
src/: CommandFactory.cpp  CommandFactory.hpp  Constants.hpp  bgit.cpp
src/commands/: CatFileCommand.cpp  CatFileCommand.hpp  HashObjectCommand.cpp  HashObjectCommand.hpp  Init.cpp  InitCommand.cpp  InitCommand.hpp  init.hpp  initCommand.hpp
src/interfaces/: ICommand.hpp
src/models/: HashObjectOptions.hpp
src/services/: CompressionService.cpp  CompressionService.hpp  FileService.cpp  FileService.hpp
